fix visible button content

--- a/app/components/value-array-input-button/styles.scss
+++ b/app/components/value-array-input-button/styles.scss
@@ -38,6 +38,7 @@ $toggle-accent-borderradius: $toggle-accent-size / 2;
   }
 
   &::before {
+    color: $color-transparent;
     content: '-';
     height: $toggle-size;
     left: 12px;
